--- a/angular/index.html
+++ b/angular/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html ng-app="app">
   <head>
-    <title>Twilio Remote Monitor</title>
+    <title>Twilio Security Camera</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -10,7 +10,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="#!/" class="navbar-brand">Twilio Remote Monitor</a>
+          <a href="#!/" class="navbar-brand">Twilio Security Camera</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
