--- a/assets/index.html
+++ b/assets/index.html
@@ -27,7 +27,15 @@
 
     <div class="container container-content" ng-view></div>
 
-    <script media="all" src="/assets/index.min.js"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
+    <script src="https://media.twiliocdn.com/sdk/js/sync/v0.5/twilio-sync.js"></script>  
+    <script src="/assets/vendor.js"></script>
+    <script src="/assets/styles.js"></script>
+    <script src="/assets/index.js"></script>
     <script type="text/javascript">
       app.init();
     </script>
