--- a/angular/index.html
+++ b/angular/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html ng-app="app">
   <head>
-    <title>Twilio Security Camera</title>
+    <title>Twilio's Security Camera Blueprint</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-custom navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="#!/" class="navbar-brand">Twilio Security Camera</a>
+          <a href="#!/" class="navbar-brand navbar-custom">Twilio's Security Camera Blueprint</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -18,8 +18,8 @@
           </button>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
-            <li><a href="#!/cameras/">Cameras</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#!/cameras/">Add New Security Camera</a></li>
           </ul>
         </div>
       </div>
